Fix feature-extended alignament

--- a/css/landing-page.scss
+++ b/css/landing-page.scss
@@ -153,9 +153,15 @@ h3 {
 	margin-top: 20px;
 	margin-bottom: -21px;
 	padding: 15px 0;
-	
+	.feature-icon {
+		padding-top: 0;
+	}
 	p {
 		text-align: justify;
+		padding-left: 60px;
+	}
+	ul {
+		padding-left: 90px;
 	}
 }
 
@@ -431,8 +437,17 @@ h3 {
 		display: block;
 		margin: 0 auto;
 	}
-	.feature-expanded .feature .feature-icon {
-		float: none;
+	.feature-expanded .feature {
+		.feature-icon {
+			float: none;
+			padding: 10px 10px 10px 0;
+		}
+		p {
+			padding-left: 0;
+		}
+		ul {
+			padding-left: 30px;
+		}
 	}
 	.team {
 		padding-top: 0;
